--- a/client/src/components/shopPage/shop.css
+++ b/client/src/components/shopPage/shop.css
@@ -1,6 +1,7 @@
 body {height:100%; overflow:hidden;}
 .scene{height: 100%; position : relative}
 
+
 .background {
     height: 100%;
     width: 100%;
@@ -21,9 +22,9 @@ body {height:100%; overflow:hidden;}
 .chick4{
     position: absolute;
     padding-right: 10%;
-    top:3%;
-    left: 18%; 
-    transform: scale(0.6);
+    top:0%;
+    left:2%; 
+    transform: scale(0.55);
     z-index: 0;
   }
 
@@ -35,7 +36,16 @@ body {height:100%; overflow:hidden;}
     transform: scale(0.3);
     z-index: 0;
   }
-
+  .point-display {
+    position: absolute;
+    top: 3.3%;
+    left: 89%;
+    transform: translate(-50%, -50%);
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    font-weight: bold;
+    z-index: 1;
+  }
 
   .items{
     display: flex;
