--- a/client/src/components/shopPage/shop.css
+++ b/client/src/components/shopPage/shop.css
@@ -55,5 +55,19 @@ body {height:100%; overflow:hidden;}
 
   .modal{
     position: absolute;
+    top : 30%;
+    left: 20%;
   }
 
+  .modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    text-align: center;
+  }
+  
+  .modal-buttons button {
+    margin: 0 10px;
+  }
+  
