--- a/client/src/components/shopPage/shop.css
+++ b/client/src/components/shopPage/shop.css
@@ -90,3 +90,30 @@ body {height:100%; overflow:hidden;}
     top: 37%;
     height: 58%;
 }
+
+.explode-animation {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100px;
+    height: 100px;
+    background-image: url('../image/fireworks.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    animation: explode 0.55s ease-in-out;
+    opacity: 0;
+  }
+  
+  @keyframes explode {
+    0% {
+      transform: translate(-50%, -50%) scale(0);
+      opacity: 1;
+    }
+    100% {
+      transform: translate(-50%, -50%) scale(4);
+      opacity: 0.8;
+    }
+  }
+  
+  
