--- a/client/src/components/shopPage/shop.css
+++ b/client/src/components/shopPage/shop.css
@@ -101,7 +101,7 @@ body {height:100%; overflow:hidden;}
     background-image: url('../image/fireworks.png');
     background-size: contain;
     background-repeat: no-repeat;
-    animation: explode 0.55s ease-in-out;
+    animation: explode 0.55s ease-in-out, slideDown 0.55s ease-in-out 0.55s;
     opacity: 0;
   }
   
@@ -110,10 +110,24 @@ body {height:100%; overflow:hidden;}
       transform: translate(-50%, -50%) scale(0);
       opacity: 1;
     }
-    100% {
+    80% {
       transform: translate(-50%, -50%) scale(4);
-      opacity: 0.8;
+      opacity: 1;
+    }
+    100%{
+        transform: translate(-50%, -50%) scale(3);
+      opacity: 0.6;
     }
   }
   
+  @keyframes slideDown {
+    0% {
+      transform: translateY(0);
+      opacity: 0.8;
+    }
+    100% {
+      transform: translateY(100%);
+      opacity: 0;
+    }
+  }
   
