[feat] 구매하기 전에는 가격을 표시, 구매 후에는 구매 완료 표시를 출력하도록 수정

--- a/client/src/components/shopPage/shop.css
+++ b/client/src/components/shopPage/shop.css
@@ -91,6 +91,11 @@ body {height:100%; overflow:hidden;}
     height: 58%;
 }
 
+.item-image{
+    position: absolute;
+    transform: scale(0.3);
+}
+
 .explode-animation {
     position: absolute;
     top: 40%;
