[Feature]시간대에 따른 해와 달 이미지 구현 및 화면 중단에 울타리 배치

--- a/client/src/components/mainPage/Main.css
+++ b/client/src/components/mainPage/Main.css
@@ -8,7 +8,7 @@
 
 /*화면 상단 요소*/
 .mainpage-top-container {
-  background-color: #2b6096; 
+  background-color: #50962b; 
   display: flex;
   justify-content: left;
   align-items: center;
@@ -30,7 +30,7 @@
   top :0px;
   display: flex;
   flex-direction: row; /* 내용 가로 정렬 */
-  background-color: #22496f; 
+  background-color: #c33545; 
   width: 100%;
   align-items: center;
   padding-left: 100px;
@@ -38,23 +38,25 @@
 
 h1{
   position: relative;
-    z-index: 1; /* h1이 이미지 위에 보이도록 설정 */
+  z-index: 1; /* h1이 이미지 위에 보이도록 설정 */
   font-family: "on";
   font-weight: 500;
-  font-size: 40px;
+  font-size: 35px;
 }
 
+/*로고의 위치만 옮기기 위한 conainer*/
 .stack-container{
   width: 50px;
-  padding-left: 70px;
-  padding-top: 30px;
+  padding-left: 50px;
+  padding-top: 20px;
   line-height: 35px;
 }
 
 .sun{
   position: absolute;
     top: 0%; /* h1 밑에 이미지가 쌓이는 위치 조정 */
-    left: 30%;
+    left: 20%;
+    width: 120px;
     transform: translateX(-50%);
     z-index: 0; /* 이미지가 h1 뒤에 보이도록 설정 */
     
@@ -64,7 +66,7 @@ h1{
 .logo-sun-container{
   margin-right: 160px;
   margin-left: -80px;
-  background-color: #e6a9e5;
+  background-color: #b3e6a9;
   position: relative;
   width: 100%;
   text-align: center;
@@ -94,10 +96,19 @@ h1{
 
 .bench-container{
   position:relative;
-  bottom:-15px;
+  bottom:70px;
   background-color: #34506d;
   width: 100%;
   height: 150px;
+  z-index: 300;
+  
+  
+  
+}
+.bench{
+  width: 100%;
+  height: 120%;
+  object-fit: cover;
 }
 
 /*화면 하단 요소*/
