--- a/client/src/components/mainPage/cloud.css
+++ b/client/src/components/mainPage/cloud.css
@@ -5,6 +5,19 @@
     display: inline-block;
     transition: transform 0.3s ease-in-out;
   }
+
+  .cloud img {
+    width: 300px; /* 이미지 크기는 필요에 따라 조정 */
+  }
+
+  .cloud-percentage {
+    position: absolute;
+    top: 50%; /* 상위 요소 대비 상하 위치 */
+    left: 50%; /* 상위 요소 대비 좌우 위치 */
+    transform: translate(-50%, -50%); /* 정확한 중앙 정렬을 위해 */
+    color: black; /* 텍스트 색상은 배경에 맞게 조정 */
+    font-weight: bold;
+  }
   
   .cloud.rain-animation::after {
     content: '💧💧💧';
