--- a/client/src/components/mainPage/Main.css
+++ b/client/src/components/mainPage/Main.css
@@ -19,7 +19,7 @@
 }
 
 .morning-background {
-  background-color: #B8E9FF; /* 아침 색상 */
+  background-color: #d3ebf5; /* 아침 색상 */
 }
 
 .night-background {
@@ -83,13 +83,14 @@ h1{
   height: 250px;
 }
 
+/*사용설명서 버튼*/
 .button-hover {
   background-color: #925d91;
 }
 
 /* 화면 중단 요소 */
 .mainpage-middle-container {
-  background-color: #e9ecef;
+  background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -99,21 +100,23 @@ h1{
 
 .bench-container{
   position:relative;
-  bottom:50px;
-  background-color: #34506d;
+  bottom:30px;
+  background-color: transparent;
   width: 100%;
   height: 150px;
   
 }
 .bench{
   width: 100%;
-  height: 120%;
+  height: 110%;
   object-fit: cover;
+  
+  
 }
 
 /*화면 하단 요소*/
 .mainpage-bottom-container {
-  background-color: #dee2e6; 
+  background-color: #B8E9FF; 
   display: flex;
   justify-content: center;
   align-items: center;
