--- a/client/src/components/MyPage/MyPage.css
+++ b/client/src/components/MyPage/MyPage.css
@@ -21,7 +21,7 @@
   
   .profile{
     background: rgba(255, 255, 255, 0.753);
-    height: 65%;
+    height: 70%;
     padding-right: 4%;
     border-bottom: 3px solid #8CD7F2;
   }
@@ -47,11 +47,11 @@
   .profile_input{
     background-color:rgba(255, 255, 255, 0.805);
     border: 3px solid #8CD7F2; 
-    border-radius: 5px; 
-    padding: 2%; 
-    font-size: 17px;
+    border-radius: 15px; 
+    padding-right:10%;
+    font-size: 15px;
     text-align: center;
-    width: 70%;
+    width: 100%;
   }
 
   .profile_input_button{
@@ -78,6 +78,7 @@
   
   .medicine_title{
     position: absolute;
+    bottom: -3%;
     width: 100%;
     height:12%;
     border-bottom: 3px solid#8CD7F2;
@@ -98,7 +99,7 @@
     left:-8%;
     text-align:left;
     padding-left: 5%;
-    padding-bottom: 5%;
+    padding-bottom: 14%;
     cursor: pointer;
   }
 
