--- a/client/src/components/mainPage/Guidebook.css
+++ b/client/src/components/mainPage/Guidebook.css
@@ -116,7 +116,7 @@
     margin-right: 200px; /* 텍스트와 이미지 사이의 간격 조정 */
     font-family: "on";
   }
-  .flower {
+  .flowerly {
     width: 20px; /* 이미지의 너비를 10px로 설정 */
     height: 20px; /* 이미지의 높이를 10px로 설정 */
   }
