--- a/client/src/components/mainPage/seed.css
+++ b/client/src/components/mainPage/seed.css
@@ -4,10 +4,17 @@
   align-items: center; /* 중앙 정렬을 원한다면 추가 */
 }
 
+.seedcancelbutton{
+  color: black;
+  font-family: "np";
+  background-color: #F5F5DC;
+  position: relative;
+  left: 20px;
+}
+
 
 .modal {
-  
-  background-color: #C8A776;
+  background-color: #F5F5DC;
   color: white;
   padding: 20px;
   border-radius: 20px;
@@ -15,18 +22,24 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1000;
+  z-index: 200;
   display: flex;
   flex-direction: column;
   align-items: center; 
 }
-h5{
+p5{
 font-family: "np";
 color: black;
  font-size: 20px;
 }
 
 
+
+.seed-list-item:hover {
+  background-color: #d9b682;
+}
+
+/*씨앗 이미지랑 텍스트 옮기고 싶으면 여기*/
 .seed-list-item {
   
   display: flex;
@@ -36,12 +49,11 @@ color: black;
   padding: 10px;
   font-family: np;
   color: black;
+  position: relative;
+  top:-10px;
+  left: -25px;
 
  
-}
-
-.seed-list-item:hover {
-  background-color: #d9b682;
 }
 
 .seed-image-container {
@@ -49,7 +61,7 @@ color: black;
   width: 50px; 
   height: 50px; 
   background-color: white; 
-  border: 1px solid #ddd; /* 사각형 테두리 */
+  border: 2px solid black; /* 사각형 테두리 */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -58,6 +70,24 @@ color: black;
 .seed-image {
   max-width: 100%;
   max-height: 100%;
+}
+
+h7{
+  color: black;
+  font-family: np;
+}
+
+p3{
+  color: black;
+  font-family: np;
+
+}
+
+.moneycancelbutton{
+  color: black;
+  font-family: "np";
+  background-color: #F5F5DC;
+
 }
 
 .seed-plant-animation {
@@ -158,7 +188,7 @@ color: black;
 }
 
 /* 꽃 이미지 크기 조절 */
-.flower5 {
+.flower{
   width: 100px; 
   height: 90px;
 }
