[CHORE]보상 수학 버튼 css 수정

--- a/client/src/components/mainPage/seed.css
+++ b/client/src/components/mainPage/seed.css
@@ -204,3 +204,10 @@ p3{
   width: 100px; 
   height: auto;
 }
+
+.accept{
+  background-color: rgb(213, 227, 149);
+  color: black;
+  font-size: 15px;
+  font-family: "np";
+}
