[feat] localStorage에 lastImage 를 저장하여 새로운 옷을 사고 입혀도 전에 입힌 옷이 사라지도록 코드 추가

--- a/client/src/components/shopPage/shop.css
+++ b/client/src/components/shopPage/shop.css
@@ -180,8 +180,10 @@ body {height:100%; overflow:hidden;}
  /* 옷입히기 */
 .img-custom-style {
     position: absolute;
-    width: 200px;
-    height: 200px;
+    top:0%;
+    left:38%;
+    width: 100px;
+    height: 100px;
     margin: 10px;
   }
   
