--- a/client/src/components/InfoPage/InfoPage_2.css
+++ b/client/src/components/InfoPage/InfoPage_2.css
@@ -10,19 +10,26 @@
     left: 53%;
      transform: translateX(-50%);
 }
+
+
 .text1 { /*MeddyBaby*/
+    font-family: "on";
     text-align: center;
 }
 
-.text1 { /*MeddyBaby*/
-    text-align: center;
+.nameofpill{ /* 약 이름 설정*/
+    font-family: "on";
+    font-size: 25px;
+    position: absolute;
+    color: #3995b9;
+    top: 41%;
+    left:40%;
 }
-
 
 
   .buttons{
     position: absolute;
-    top: 390px; /* 원하는 위치로 조정 */
+    top: 52%; /* 원하는 위치로 조정 */
     left: 49%;
      transform: translateX(-50%);
 
@@ -34,18 +41,20 @@
 .morning,
 .lunch,
 .dinner {
+    font-family: "on";
     border-color: '#87CEEB'; /* 테두리 색상 */
     margin-right: 10px; /* 버튼 사이의 간격 조절 */
     margin-left: 10px;
 }
 
-.checkbox{
-
+.checkbox{ /*식후, 식전 설정*/
+    font-family: "on";
     position: absolute;
-    top: 480px; /* 원하는 위치로 조정 */
+    top: 63%; /* 원하는 위치로 조정 */
     left: 50%;
      transform: translateX(-50%);
      display: flex;
+    font-size: 25px;
 
 }
 
@@ -59,18 +68,19 @@
     color: #3995b9; /* 원하는 색상으로 변경 */
   }
   
-.timeset{
+.timeset{ /*매 시간마다 의사 지시대로*/
+    font-family: "on";
+    font-size:25px;
     position: absolute;
     top: 66%;
     left: 16%;
     color: #3995b9;
-    
-
 }
 
-.nameofpill{
-    position: absolute;
-    color: #3995b9;
-    top: 41%;
-    left:40%;
-}
+
+
+@font-face {
+    font-family: "on";
+    font-weight: 50;
+    src: url("../../fonts/온글잎 밑미.ttf");
+  }
