[CHORE]메인 페이지 css 수정

--- a/client/src/components/mainPage/cloud.css
+++ b/client/src/components/mainPage/cloud.css
@@ -46,7 +46,12 @@
     }
   }
 
+  /*메인 페이지 구름 위 clear 버튼*/
   .what{
-    background-color: rgb(77, 47, 177);
+    background-color: transparent;
+    font-family: "on";
+    font-size: 25px;
+    
+    
   }
   
