[CHORE]설명 모달 창 css 수정 및 마이페이지에 대한 설명 이미지 슬라이드 추가

--- a/client/src/components/mainPage/Guidebook.css
+++ b/client/src/components/mainPage/Guidebook.css
@@ -71,11 +71,16 @@
   /*모달 창 안 버튼*/
   .click{
     margin-top: 8px;
-    margin-right: 150px;
+    margin-right: 170px;
     margin-left: 50px;
-    background-color: #ead899;
+    background-color: transparent;
     font-family: "on";
-    border-radius: 10px;
+    border-radius: 20px;
+   
+    width: 40px;
+    height: 30px;
+    color: #000;
+    font-size: 20px;
     
   }
  
@@ -166,6 +171,7 @@
     border: none;
     font-size: 2.5rem;
     cursor: pointer;
+    color: #000;
   }
 
 
