--- a/client/src/components/InfoPage/InfoPage_3.css
+++ b/client/src/components/InfoPage/InfoPage_3.css
@@ -16,7 +16,7 @@ input[type="number"] {
      transform: translateX(-50%);
 }
 
-.text1{
+.text1_info{
     text-align: center;
 }
 
@@ -32,7 +32,7 @@ input[type="number"] {
     margin-top: 50px; /* 버튼 사이의 간격 조절 */
 }
 
-button {
+.button_info3 {
   font-family: on;
     background-color: #87CEEB; /* 배경색: 하늘색 */
     border: none; /* 테두리 제거 */
