--- a/client/src/components/InfoPage/InfoPage_1.css
+++ b/client/src/components/InfoPage/InfoPage_1.css
@@ -1,5 +1,14 @@
 
-
+button{
+  font-family: on;
+  background-color: #82d1ff;
+  border: none; /* 테두리 제거 */
+  border-radius: 20px; /* 둥근 모서리 */
+  padding: 10px 20px; /* 내부 여백 */
+  font-size: 20px; /* 글꼴 크기 */
+  cursor: pointer; /* 마우스 커서를 포인터로 변경하여 버튼임을 나타냄 */
+  color:#ffffff ;
+}
 .navigator {
 
     background-size: contain; /* 이미지가 잘림없이 전체 표시되도록 설정 */
