--- a/client/src/components/InfoPage/InfoPage_2.css
+++ b/client/src/components/InfoPage/InfoPage_2.css
@@ -1,100 +1,95 @@
 .background2{
-    display: flex;
-    background-image: url('../../../public/info2_background.png');
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: 95%;
-    position: absolute;
-    top: 60px; /* 원하는 위치로 조정 */
-    left: 53%;
-     transform: translateX(-50%);
+  display: flex;
+  background-image: url('../../../public/info2_background.png');
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: 95%;
+  position: absolute;
+  top: 60px; /* 원하는 위치로 조정 */
+  left: 53%;
+   transform: translateX(-50%);
 }
 
 
-.title_info { /*MeddyBaby*/
-  font-family:"on";
-  font-size: 40px;
-    text-align: center;
+.text1 { /*MeddyBaby*/
+  font-family: "on";
+  text-align: center;
 }
 
 .nameofpill{ /* 약 이름 설정*/
-    font-family: "on";
-    font-size: 25px;
-    position: absolute;
-    color: #3995b9;
-    top: 41%;
-    left:40%;
+  font-family: "on";
+  font-size: 25px;
+  position: absolute;
+  color: #3995b9;
+  top: 41%;
+  left:40%;
 }
 
 
-  .buttons_info{
-    position: absolute;
-    top: 52%; /* 원하는 위치로 조정 */
-    left: 49%;
-     transform: translateX(-50%);
-     display: flex; /*가로로 배치*/
-     border: 2px;
-     border-radius: '30px';
-     padding: '0px 25px';
-     font-size: 10px;
-  }
+.buttons{
+  position: absolute;
+  top: 52%; /* 원하는 위치로 조정 */
+  left: 49%;
+   transform: translateX(-50%);
+
+   display: flex; /*가로로 배치*/
+  
+   
+}
 
 .morning,
 .lunch,
 .dinner {
-    font-family: "on";
-
-    border: 10px;
-    border-color: '#87CEEB'; /* 테두리 색상 */
-    margin-right: 10px; /* 버튼 사이의 간격 조절 */
-    margin-left: 10px;
-
+  font-family: "on";
+  border-color: '#87CEEB'; /* 테두리 색상 */
+  margin-right: 10px; /* 버튼 사이의 간격 조절 */
+  margin-left: 10px;
 }
 
 .checkbox{ /*식후, 식전 설정*/
-    font-family: "on";
-    position: absolute;
-    top: 63%; /* 원하는 위치로 조정 */
-    left: 50%;
-     transform: translateX(-50%);
-     display: flex;
-    font-size: 25px;
+  font-family: "on";
+  position: absolute;
+  top: 63%; /* 원하는 위치로 조정 */
+  left: 50%;
+   transform: translateX(-50%);
+   display: flex;
+  font-size: 25px;
 
 }
 
 .after,
 .before{
-    margin-right: 20px; /* 체크 버튼 사이의 간격 조절 */
-    margin-left: 10px;
+  margin-right: 20px; /* 버튼 사이의 간격 조절 */
+  margin-left: 10px;
 }
 
 .checkbox label {
-    color: #3995b9; /* 원하는 색상으로 변경 */
-  }
+  color: #3995b9; /* 원하는 색상으로 변경 */
+}
 
-  .date{ /* _일 동안 복용*/
-    font-family: "on";
-    font-size:25px;
-    position: absolute;
-    top: 68.5%;
-    left: 35%;
-    color: #3995b9;
-  }
-  
+.date{ /* _일 동안 복용*/
+  font-family: "on";
+  font-size:25px;
+  position: absolute;
+  top: 68.5%;
+  left: 35%;
+  color: #3995b9;
+}
+
 .timeset{ /*매 시간마다 의사 지시대로*/
-    font-family: "on";
-    font-size:25px;
-    position: absolute;
-    top: 72%;
-    left: 16%;
-    color: #3995b9;
+  font-family: "on";
+  font-size:25px;
+  position: absolute;
+  top: 72%;
+  left: 16%;
+  color: #3995b9;
 }
 
 
 
 @font-face {
-    font-family: "on";
-    font-weight: 50;
-    src: url("../../fonts/온글잎 밑미.ttf");
-  }
+  font-family: "on";
+  font-weight: 50;
+  src: url("../../fonts/온글잎 밑미.ttf");
+}
