--- a/client/src/components/navigationBar/NavigationBar.css
+++ b/client/src/components/navigationBar/NavigationBar.css
@@ -6,16 +6,21 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #f8f9fa;
+  background-color: #e0ffcb;
   box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
 }
 
 .nav-item {
+  font-family: on;
   padding: 10px 15px;
   text-decoration: none;
-  color: #007bff;
-  font-size: 16px;
+  color: #303030;
+  font-size: 25px;
 }
-
+@font-face {
+  font-family: "on";
+  font-weight: 50;
+  src: url("../../fonts/온글잎 밑미.ttf");
+}
   
   
