--- a/client/src/components/navigationBar/NavigationBar.css
+++ b/client/src/components/navigationBar/NavigationBar.css
@@ -6,15 +6,16 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: #e0ffcb;
-  box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
+  background-color: #567441;
+  box-shadow: 0 -2px 5px rgba(255, 255, 255, 0.1);
 }
 
 .nav-item {
+  background-image: url('../../../public/home_icon.png');
   font-family: on;
   padding: 10px 15px;
   text-decoration: none;
-  color: #303030;
+  color: #ffffff;
   font-size: 25px;
 }
 @font-face {
